# time-dep-hjb

./: .gitignore  CMakeLists.txt  README.md  README_RAW.md
python/: Lerror.py  npy_plot.py
src/: AnalyticErr.cpp  AnalyticErr.hpp  BoundCondTemp.hpp  BoundaryCond.cpp  BoundaryCond.h  CMakeLists.txt  CachedImpLattice2D.hpp  ExplicitLattice2D.hpp  ExplicitTDHJ2D.cpp  HJ2DFunc.cpp  HJ2DFunc.h  HJBQuadraSolver2D.h  ImplicitLattice2D.hpp  ImplicitTDHJ2D.cpp  InterpErr.cpp  InterpErr.h  LatticeData2D.h  MixedLattice2D.hpp  MixedTDHJ2D.cpp  QuadraParam.h  QuadraticSolver2D.hpp  TestCases.cpp  TestCases.h  TimeDepHJ2DEqu.hpp  TimeIndepSpeedMixedLattice2D.hpp  UpwindGrad2D.cpp  UpwindGrad2D.h  config.h  vector2.hpp
src/generic/: PriorityQueue.hpp
src/io/: IOEndian.h  multiarray_io.c  multiarray_io.h  npy.c  npy.h  npy_arrays.hpp
src/utils/: arrays.hpp  macros.h  math.hpp  nano_timer.c  nano_timer.h
test_scripts/: test07.pl  test07_err.pl
